--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 1,
   "type": "WebApp",
   "meta": {
-    "name": "PUBG Dev Challenge Sample",
+    "name": "PUBG Post Analytica",
     "version": "0.0.1",
     "minimum-overwolf-version": "0.120.0",
     "author": "Joan Albert Segura Rueda",
