--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,67 +1,23 @@
 {
-	"name": "overwolf-react",
+	"name": "pubg-ow-post-analysis",
 	"version": "0.1.0",
 	"private": true,
-	"dependencies": {
-		"react": "^16.6.0",
-		"react-dom": "^16.6.0",
-		"react-router-dom": "^4.3.1"
-	},
 	"scripts": {
 		"start": "node scripts/start.js",
 		"reload": "nodemon --watch src -e .jsx,.js,.css --ignore build/ --exec npm run build",
 		"build": "set PUBLIC_URL=./&& node scripts/build.js",
-		"test": "node scripts/test.js"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
-	},
-	"browserslist": [
-		">0.2%",
-		"not dead",
-		"not ie <= 11",
-		"not op_mini all"
-	],
-	"jest": {
-		"collectCoverageFrom": [
-			"src/**/*.{js,jsx}"
-		],
-		"resolver": "jest-pnp-resolver",
-		"setupFiles": [
-			"react-app-polyfill/jsdom"
-		],
-		"testMatch": [
-			"<rootDir>/src/**/__tests__/**/*.{js,jsx}",
-			"<rootDir>/src/**/?(*.)(spec|test).{js,jsx}"
-		],
-		"testEnvironment": "jsdom",
-		"testURL": "http://localhost",
-		"transform": {
-			"^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
-			"^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-			"^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-		},
-		"transformIgnorePatterns": [
-			"[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$",
-			"^.+\\.module\\.(css|sass|scss)$"
-		],
-		"moduleNameMapper": {
-			"^react-native$": "react-native-web",
-			"^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-		},
-		"moduleFileExtensions": [
-			"web.js",
-			"js",
-			"json",
-			"web.jsx",
-			"jsx",
-			"node"
-		]
+		"test": "npm run lint && node scripts/test.js",
+		"lint": "eslint ."
 	},
 	"babel": {
 		"presets": [
 			"react-app"
 		]
+	},
+	"dependencies": {
+		"react": "^16.6.0",
+		"react-dom": "^16.6.0",
+		"react-router-dom": "^4.3.1"
 	},
 	"devDependencies": {
 		"@babel/core": "7.1.0",
@@ -79,12 +35,16 @@
 		"css-loader": "1.0.0",
 		"dotenv": "6.0.0",
 		"dotenv-expand": "4.2.0",
-		"eslint": "5.6.0",
+		"eslint": "^5.6.0",
+		"eslint-config-airbnb": "^17.1.0",
+		"eslint-config-prettier": "^4.1.0",
 		"eslint-config-react-app": "^3.0.4",
 		"eslint-loader": "2.1.1",
-		"eslint-plugin-flowtype": "2.50.1",
-		"eslint-plugin-import": "2.14.0",
+		"eslint-plugin-flowtype": "^3.4.2",
+		"eslint-plugin-import": "^2.16.0",
+		"eslint-plugin-jest": "^22.3.0",
 		"eslint-plugin-jsx-a11y": "6.1.2",
+		"eslint-plugin-prettier": "^3.0.1",
 		"eslint-plugin-react": "7.11.1",
 		"file-loader": "2.0.0",
 		"fs-extra": "7.0.0",
