--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - checkout
 
+      - run: cd frontend
+
       # Download and cache dependencies
       - restore_cache:
           keys:
@@ -27,7 +29,7 @@ jobs:
           paths:
             - node_modules
 
-      - run: cd frontend && npm run lint
+      - run: npm run lint
 
 workflows:
   version: 2
