--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,8 @@
 		"start": "node scripts/start.js",
 		"reload": "nodemon --watch src -e .jsx,.js,.css --ignore build/ --exec npm run build",
 		"build": "set PUBLIC_URL=./&& node scripts/build.js",
-		"test": "npm run lint && node scripts/test.js",
+		"test": "node scripts/test.js",
 		"lint": "eslint ."
-	},
-	"babel": {
-		"presets": [
-			"react-app"
-		]
 	},
 	"dependencies": {
 		"react": "^16.6.0",
