--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
 		"lint": "eslint ."
 	},
 	"dependencies": {
+		"axios": "^0.18.0",
 		"react": "^16.6.0",
 		"react-dom": "^16.6.0",
 		"react-router-dom": "^4.3.1"
