--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -20,7 +20,14 @@
     "react"
   ],
   "rules": {
-    "no-console": "warn",
+    "no-console": "off",
+    "no-restricted-syntax": [
+      "warn",
+      {
+        "selector": "CallExpression[callee.object.name='console'][callee.property.name!=/^(error|info|trace)$/]",
+        "message": "Unexpected property on console object was called"
+      }
+    ],
     "no-case-declarations": "off",
     "no-use-before-define": "off",
     "no-shadow": "warn",
