--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
 		"axios": "^0.18.0",
 		"react": "^16.6.0",
 		"react-dom": "^16.6.0",
-		"react-router-dom": "^4.3.1"
+		"react-router-dom": "^4.3.1",
+		"react-transition-group": "^2.7.0"
 	},
 	"devDependencies": {
 		"@babel/core": "7.1.0",
